# sha256-comparison

./: CMakeLists.txt  README.md  algorithm_wrappers.h  main.cpp  test.cpp  vcpkg.json
bitcoin/: CMakeLists.txt  common.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp
results/: plot.py
zedwood/: CMakeLists.txt  sha256.cpp  sha256.h
